// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auto-discover 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
import * as path from 'path';
import * as lambda from '@aws-cdk/aws-lambda';
import { Construct } from '@aws-cdk/core';

/**
 * Props for HelloFunction
 */
export interface HelloFunctionProps extends lambda.FunctionOptions {
}

/**
 * An AWS Lambda function which executes src/hello.
 */
export class HelloFunction extends lambda.Function {
  constructor(scope: Construct, id: string, props?: HelloFunctionProps) {
    super(scope, id, {
      description: 'src/hello.lambda.ts',
      ...props,
      runtime: lambda.Runtime.NODEJS_12_X,
      handler: 'index.handler',
      code: lambda.Code.fromAsset(path.join(__dirname, '../assets/src/hello')),
    });
  }
}"
`;

exports[`auto-discover 2`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
import * as path from 'path';
import * as lambda from '@aws-cdk/aws-lambda';
import { Construct } from '@aws-cdk/core';

/**
 * Props for WorldFunction
 */
export interface WorldFunctionProps extends lambda.FunctionOptions {
}

/**
 * An AWS Lambda function which executes src/subdir/world.
 */
export class WorldFunction extends lambda.Function {
  constructor(scope: Construct, id: string, props?: WorldFunctionProps) {
    super(scope, id, {
      description: 'src/subdir/world.lambda.ts',
      ...props,
      runtime: lambda.Runtime.NODEJS_12_X,
      handler: 'index.handler',
      code: lambda.Code.fromAsset(path.join(__dirname, '../../assets/src/subdir/world')),
    });
  }
}"
`;

exports[`auto-discover 3`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
import * as path from 'path';
import * as lambda from '@aws-cdk/aws-lambda';
import { Construct } from '@aws-cdk/core';

/**
 * Props for JangyFunction
 */
export interface JangyFunctionProps extends lambda.FunctionOptions {
}

/**
 * An AWS Lambda function which executes src/subdir/jangy.
 */
export class JangyFunction extends lambda.Function {
  constructor(scope: Construct, id: string, props?: JangyFunctionProps) {
    super(scope, id, {
      description: 'src/subdir/jangy.lambda.ts',
      ...props,
      runtime: lambda.Runtime.NODEJS_12_X,
      handler: 'index.handler',
      code: lambda.Code.fromAsset(path.join(__dirname, '../../assets/src/subdir/jangy')),
    });
  }
}"
`;

exports[`auto-discover 4`] = `
Object {
  "description": "Prepare assets",
  "name": "bundle",
  "steps": Array [
    Object {
      "spawn": "bundle:src/hello",
    },
    Object {
      "spawn": "bundle:src/subdir/jangy",
    },
    Object {
      "spawn": "bundle:src/subdir/world",
    },
  ],
}
`;

exports[`auto-discover 5`] = `
Object {
  "description": "Create a JavaScript bundle from src/hello.lambda.ts",
  "name": "bundle:hello",
  "steps": Array [
    Object {
      "exec": "esbuild --bundle src/hello.lambda.ts --target=\\"node12\\" --platform=\\"node\\" --outfile=\\"assets/hello/index.js\\" --external:aws-sdk --sourcemap",
    },
  ],
}
`;

exports[`auto-discover 6`] = `
Object {
  "description": "Continuously update the JavaScript bundle from src/hello.lambda.ts",
  "name": "bundle:hello:watch",
  "steps": Array [
    Object {
      "exec": "esbuild --bundle src/hello.lambda.ts --target=\\"node12\\" --platform=\\"node\\" --outfile=\\"assets/hello/index.js\\" --external:aws-sdk --sourcemap --watch",
    },
  ],
}
`;

exports[`auto-discover 7`] = `
Object {
  "description": "Create a JavaScript bundle from src/subdir/jangy.lambda.ts",
  "name": "bundle:subdir/jangy",
  "steps": Array [
    Object {
      "exec": "esbuild --bundle src/subdir/jangy.lambda.ts --target=\\"node12\\" --platform=\\"node\\" --outfile=\\"assets/subdir/jangy/index.js\\" --external:aws-sdk --sourcemap",
    },
  ],
}
`;

exports[`auto-discover 8`] = `
Object {
  "description": "Continuously update the JavaScript bundle from src/subdir/jangy.lambda.ts",
  "name": "bundle:subdir/jangy:watch",
  "steps": Array [
    Object {
      "exec": "esbuild --bundle src/subdir/jangy.lambda.ts --target=\\"node12\\" --platform=\\"node\\" --outfile=\\"assets/subdir/jangy/index.js\\" --external:aws-sdk --sourcemap --watch",
    },
  ],
}
`;

exports[`auto-discover 9`] = `
Object {
  "description": "Create a JavaScript bundle from src/subdir/world.lambda.ts",
  "name": "bundle:subdir/world",
  "steps": Array [
    Object {
      "exec": "esbuild --bundle src/subdir/world.lambda.ts --target=\\"node12\\" --platform=\\"node\\" --outfile=\\"assets/subdir/world/index.js\\" --external:aws-sdk --sourcemap",
    },
  ],
}
`;

exports[`auto-discover 10`] = `
Object {
  "description": "Continuously update the JavaScript bundle from src/subdir/world.lambda.ts",
  "name": "bundle:subdir/world:watch",
  "steps": Array [
    Object {
      "exec": "esbuild --bundle src/subdir/world.lambda.ts --target=\\"node12\\" --platform=\\"node\\" --outfile=\\"assets/subdir/world/index.js\\" --external:aws-sdk --sourcemap --watch",
    },
  ],
}
`;

exports[`bundled function generates source code for a lambda construct 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
import * as path from 'path';
import * as lambda from '@aws-cdk/aws-lambda';
import { Construct } from '@aws-cdk/core';

/**
 * Props for HelloFunction
 */
export interface HelloFunctionProps extends lambda.FunctionOptions {
}

/**
 * An AWS Lambda function which executes src/hello.
 */
export class HelloFunction extends lambda.Function {
  constructor(scope: Construct, id: string, props?: HelloFunctionProps) {
    super(scope, id, {
      description: 'src/hello.lambda.ts',
      ...props,
      runtime: lambda.Runtime.NODEJS_14_X,
      handler: 'index.handler',
      code: lambda.Code.fromAsset(path.join(__dirname, '../my-assets/src/hello')),
    });
  }
}"
`;

exports[`constructFile and constructName can be used to customize the generated construct 1`] = `undefined`;

exports[`multiple functions 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
import * as path from 'path';
import * as lambda from '@aws-cdk/aws-lambda';
import { Construct } from '@aws-cdk/core';

/**
 * Props for HelloFunction
 */
export interface HelloFunctionProps extends lambda.FunctionOptions {
}

/**
 * An AWS Lambda function which executes src/hello.
 */
export class HelloFunction extends lambda.Function {
  constructor(scope: Construct, id: string, props?: HelloFunctionProps) {
    super(scope, id, {
      description: 'src/hello.lambda.ts',
      ...props,
      runtime: lambda.Runtime.NODEJS_14_X,
      handler: 'index.handler',
      code: lambda.Code.fromAsset(path.join(__dirname, '../assets/src/hello')),
    });
  }
}"
`;

exports[`multiple functions 2`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
import * as path from 'path';
import * as lambda from '@aws-cdk/aws-lambda';
import { Construct } from '@aws-cdk/core';

/**
 * Props for WorldFunction
 */
export interface WorldFunctionProps extends lambda.FunctionOptions {
}

/**
 * An AWS Lambda function which executes src/world.
 */
export class WorldFunction extends lambda.Function {
  constructor(scope: Construct, id: string, props?: WorldFunctionProps) {
    super(scope, id, {
      description: 'src/world.lambda.ts',
      ...props,
      runtime: lambda.Runtime.NODEJS_14_X,
      handler: 'index.handler',
      code: lambda.Code.fromAsset(path.join(__dirname, '../assets/src/world')),
    });
  }
}"
`;
